--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: JaeJoong Lee # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+   :school: Purdue University, B.S. Computer Sciecne 3.74/4.00
   <br><br>
   Second description 
   <br><br>
