--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: JaeJoong Lee # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-   :school: Purdue University, B.S. Computer Sciecne 3.74/4.00
+  Purdue University, B.S. Computer Sciecne 3.74/4.00
   <br><br>
-  Second description 
+  Eager to work on Deep Learning Projects using Computer Vision and NLP.
   <br><br>
   <a href="https://www.linkedin.com/in/jaejoong/">View My LinkedIn Profile</a> 
   
