--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.linkedin.com/in/jaejoong/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
-google_analytics: "UA-152778367-1" # your Google Analytics tracking ID here
+google_analytics: UA-152778367-1 # your Google Analytics tracking ID here
