--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,10 @@ logo: "/images/me.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Purdue University, B.S. Computer Sciecne 3.74/4.00
   <br><br>
+  Published SCI papers related to Image Processing, Computer Vision and Deep Learning.
   Eager to work on Deep Learning Projects using Computer Vision and NLP.
+  <br><br>
+  Worked in three different start-ups in three different countries.
   <br><br>
   <a href="https://www.linkedin.com/in/jaejoong/">View My LinkedIn Profile</a> 
   
