--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: JaeJoong Lee # your name (or website title) here
 logo: "/images/me.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Purdue University, B.S. Computer Sciecne 3.74/4.00
+  :mortar_board: Purdue University, B.S. Computer Sciecne 3.74/4.00
   <br><br>
   Published SCI papers related to Image Processing, Computer Vision and Deep Learning.
+  <br><br>
   Eager to work on Deep Learning Projects using Computer Vision and NLP.
   <br><br>
   Worked in three different start-ups in three different countries.
