--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: JaeJoong Lee # your name (or website title) here
 logo: "/images/me.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Purdue University, B.S. Computer Sciecne 3.74/4.00
+  Purdue Univ., B.S. Computer Sciecne 3.74/4.00
   <br><br>
   Published SCI papers related to Image Processing, Computer Vision and Deep Learning.
   <br><br>
